Replace GTN_WaterModuleMagicGenerator new processing system